--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   provider: ^6.1.1
   pbp_django_auth: ^0.4.0
   google_fonts: 6.1.0
+  http: ^1.1.0
+  date_field: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
